Adds User Serialized and ViewSets, adds JWT, enables user registration

--- a/api/Pipfile
+++ b/api/Pipfile
@@ -10,6 +10,8 @@ name = "pypi"
 django = "*"
 djangorestframework = "*"
 django-filter = "*"
+"e1839a8" = {path = ".", editable = true}
+djangorestframework-jwt = "*"
 
 
 [dev-packages]
