--- a/rn/todo_app/app.json
+++ b/rn/todo_app/app.json
@@ -1,4 +1,4 @@
 {
-  "name": "todo_app",
-  "displayName": "todo_app"
+  "name": "To Do Manager",
+  "displayName": "To Do Manager - React Native Academy Project"
 }
