--- a/rn/todo_app/package.json
+++ b/rn/todo_app/package.json
@@ -59,7 +59,7 @@
     "ignite-redux-persist": "^1.1.0",
     "ignite-standard": "^1.0.0",
     "ignite-vector-icons": "^1.1.0",
-    "jest": "23.0.0-alpha.0",
+    "jest": "22.4.2",
     "mockery": "^2.1.0",
     "react-dom": "16.0.0",
     "react-test-renderer": "^16.3.0-alpha.1",
