--- a/rn/todo_app/package.json
+++ b/rn/todo_app/package.json
@@ -35,6 +35,7 @@
     "react-native": "0.54.1",
     "react-native-animatable": "^1.2.4",
     "react-native-config": "^0.10.0",
+    "react-native-image-picker": "^0.26.7",
     "react-native-vector-icons": "4.3.0",
     "react-navigation": "^1.0.0-beta.27",
     "react-navigation-redux-helpers": "^1.0.3",
