--- a/rn/todo_app/android/app/build.gradle
+++ b/rn/todo_app/android/app/build.gradle
@@ -137,6 +137,11 @@ android {
 }
 
 dependencies {
+    compile project(':react-native-vector-icons')
+    compile project(':react-native-image-picker')
+    compile project(':react-native-fetch-blob')
+    compile project(':react-native-contacts')
+    compile project(':react-native-config')
     compile project(':react-native-contacts')
     compile project(':react-native-vector-icons')
     compile project(':react-native-image-picker')
