--- a/rn/todo_app/package.json
+++ b/rn/todo_app/package.json
@@ -37,6 +37,7 @@
     "react-native-animatable": "^1.2.4",
     "react-native-config": "^0.10.0",
     "react-native-contacts": "^2.1.3",
+    "react-native-fetch-blob": "^0.10.8",
     "react-native-image-picker": "^0.26.7",
     "react-native-vector-icons": "4.3.0",
     "react-navigation": "^1.0.0-beta.27",
